<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/rave_topLay"
                android:paddingTop="10dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/rave_amountTil"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount"
                        android:id="@+id/rave_amountTV"
                        android:inputType="numberDecimal"
                        android:layout_below="@+id/rave_card1"
                        android:layout_marginBottom="10dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/rave_emailTil"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:id="@+id/rave_emailTv"
                        android:inputType="textEmailAddress"
                        android:layout_below="@+id/rave_card1"
                        android:layout_marginBottom="10dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/rave_cardNoTil"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    tools:ignore="ExtraText">

                    <ng.com.laundrify.laundrify.RaveClasses.card.CreditCardView
                        android:hint="@string/card_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rave_cardNoTv"
                        android:layout_gravity="center"/>

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rave_cvvExpLay"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dip"
                        android:id="@+id/rave_cardExpiryTil"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/expiration"
                            android:paddingRight="50dp"
                            android:paddingEnd="50dp"
                            android:id="@+id/rave_cardExpiryTv"
                            android:inputType="number"
                            android:maxLength="5"
                            android:layout_below="@+id/rave_card1"
                            android:layout_marginBottom="10dp"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dip"
                        android:id="@+id/rave_cvvTil"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cvc_cvv2"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:id="@+id/rave_cvvTv"
                            android:imeOptions="actionDone"
                            android:layout_below="@+id/rave_card1"
                            android:layout_marginBottom="10dp"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/save_card"
                    android:id="@+id/rave_saveCardSwitch"
                    android:visibility="gone"
                    />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay"
                    style="?PayButtonStyle"
                    android:id="@+id/rave_payButton"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/red_solid_selector"
                    android:textColor="@color/colorAccent"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E5E5E5"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_saved_card"
                    android:id="@+id/rave_savedCardButton"
                    style="?SavedCardButtonStyle"
                    android:visibility="gone"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="35dp"
                    android:layout_marginLeft="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/powered_by"
                    android:textSize="10sp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_rave_logo"
                    android:drawableLeft="@drawable/ic_rave_logo"/>

                <TextView
                    android:id="@+id/rave_pcidss_compliant_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="5dp"
                    android:text="@string/pci_dss_compliant"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

